--- a/index.html
+++ b/index.html
@@ -123,20 +123,14 @@
       height: 60px;
       margin-bottom: 10px;
     }
-    /* Детали c компактным графиком и переключателем валют */
-    .currency-switch {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    /* Детали с компактным графиком и переключателем */
+    #details { max-width: 1000px; margin: 0 auto 40px; }
+    .currency-switch { text-align: center; margin-bottom: 20px; }
     .currency-switch select {
       padding: 5px 10px;
       border-radius: 4px;
       border: 1px solid #ccc;
       font-size: 1rem;
-    }
-    #details {
-      max-width: 1000px;
-      margin: 0 auto 40px;
     }
     .detail-item {
       display: flex;
@@ -147,43 +141,16 @@
       border-radius: 8px;
       margin-bottom: 20px;
     }
-    .detail-info {
-      flex: 1;
-      color: #ddd;
-    }
-    .detail-info img {
-      width: 48px;
-      height: 48px;
-      margin-bottom: 10px;
-    }
-    .detail-info h3 {
-      margin-bottom: 8px;
-      color: #4a90e2;
-    }
-    .detail-info p {
-      margin-bottom: 8px;
-      font-size: 0.9rem;
-      line-height: 1.4;
-    }
-    .detail-chart {
-      width: 300px;
-      flex-shrink: 0;
-    }
-    .detail-chart canvas {
-      width: 100% !important;
-      height: 180px !important;
-    }
-    #contact p {
-      text-align: center;
-      color: #ddd;
-    }
+    .detail-info { flex: 1; color: #ddd; }
+    .detail-info img { width: 48px; height: 48px; margin-bottom: 10px; }
+    .detail-info h3 { margin-bottom: 8px; color: #4a90e2; }
+    .detail-info p { margin-bottom: 8px; font-size: 0.9rem; line-height: 1.4; }
+    .detail-chart { width: 300px; flex-shrink: 0; }
+    .detail-chart canvas { width: 100% !important; height: 180px !important; }
+    #contact p { text-align: center; color: #ddd; }
     a { color: #4a90e2; }
     a:hover { text-decoration: underline; }
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #ddd;
-    }
+    footer { text-align: center; padding: 20px; color: #ddd; }
   </style>
 </head>
 <body>
@@ -240,7 +207,7 @@
         <div class="currency-switch">
           <label for="currencyToggle">Показать графики в: </label>
           <select id="currencyToggle">
-            <option value="USD">USD</option>
+            <option value="USD" selected>USD</option>
             <option value="RUB">RUB</option>
           </select>
         </div>
@@ -248,15 +215,83 @@
           <div class="detail-info">
             <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1.png" alt="BTC">
             <h3>Bitcoin (BTC)</h3>
-            <p>Рыночная капитализация: ~$900 млрд. Доминирующая позиция, высокая волатильность.</p>
-            <p>Анализ: Стабильный рост после коррекции, инвесторы рассматривают BTC как защитный актив.</p>
+            <p>Рыночная капитализация: ~$900 млрд.</p>
+            <p>Анализ: Стабильный рост после коррекции.</p>
           </div>
-          <div class="detail-chart"><canvas id="btcChart" width="300" height="180"></canvas></div>
+          <div class="detail-chart"><canvas id="btcChart"></canvas></div>
         </div>
         <div class="detail-item">
           <div class="detail-info">
             <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="ETH">
             <h3>Ethereum (ETH)</h3>
-            <p>Ры.unsplash.com/1920x1080/?crypto,blockchain')
+            <p>Рыночная капитализация: ~$400 млрд.</p>
+            <p>Анализ: Переход на PoS снизил инфляцию.</p>
+          </div>
+          <div class="detail-chart"><canvas id="ethChart"></canvas></div>
+        </div>
+        <div class="detail-item">
+          <div class="detail-info">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/825.png" alt="USDT">
+            <h3>Tether (USDT)</h3>
+            <p>Рыночная капитализация: ~$83 млрд.</p>
+            <p>Анализ: Полная поддержка резервами.</p>
+            <p>Курс 15 апреля 2025: 1 USDT = 75 ₽</p>
+          </div>
+          <div class="detail-chart"><canvas id="usdtChart"></canvas></div>
+        </div>
+        <div class="detail-item">
+          <div class="detail-info">
+            <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/52.png" alt="XRP">
+            <h3>XRP (Ripple)</h3>
+            <p>Рыночная капитализация: ~$25 млрд.</p>
+            <p>Анализ: Регуляторные риски сохраняются.</p>
+          </div>
+          <div class="detail-chart"><canvas id="xrpChart"></canvas></div>
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Контакты</h2>
+        <p>Свяжитесь с нами: <a href="mailto:info@example.com">info@example.com</a></p>
+      </section>
+      <footer><p>&copy; 2025 Крипто-Лендинг. Все права защищены.</p></footer>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+  <script>
+    // Данные USD
+    const staticUSD = {
+      BTC: { labels:['01 Apr','05 Apr','10 Apr','15 Apr','20 Apr','25 Apr','30 Apr'], prices:[58000,60000,59000,62000,61000,63000,64000]},
+      ETH: { labels:['01 Apr','05 Apr','10 Apr','15 Apr','20 Apr','25 Apr','30 Apr'], prices:[3200,3400,3300,3500,3450,3600,3700]},
+      USDT:{ labels:['01 Apr','05 Apr','10 Apr','15 Apr','20 Apr','25 Apr','30 Apr'], prices:[1,1,1,1,1,1,1]},
+      XRP: { labels:['01 Apr','05 Apr','10 Apr','15 Apr','20 Apr','25 Apr','30 Apr'], prices:[0.5,0.55,0.52,0.58,0.56,0.6,0.62]}
+    };
+    const RUB_RATE = 75;
+    window.onload = () => {
+      const charts = {};
+      const coins = [
+        { key:'BTC', id:'btcChart', color:'#f39c12' },
+        { key:'ETH', id:'ethChart', color:'#3498db' },
+        { key:'USDT',id:'usdtChart', color:'#2ecc71' },
+        { key:'XRP', id:'xrpChart', color:'#9b59b6' }
+      ];
+      const create = coin => {
+        const ctx = document.getElementById(coin.id).getContext('2d');
+        const grad = ctx.createLinearGradient(0,0,0,180);
+        grad.addColorStop(0,coin.color+'80');
+        grad.addColorStop(1,coin.color+'00');
+        return new Chart(ctx,{ type:'line', data:{ labels:staticUSD[coin.key].labels, datasets:[{ label:coin.key, data:staticUSD[coin.key].prices, fill:'start', backgroundColor:grad, borderColor:coin.color, tension:0.4 }] }, options:{ responsive:true, plugins:{ legend:{ labels:{ color:'#fff' } } }, scales:{ x:{ ticks:{ color:'#fff' }, grid:{ color:'rgba(255,255,255,0.2)' } }, y:{ ticks:{ color:'#fff' }, grid:{ color:'rgba(255,255,255,0.2)' } } } } });
+      };
+      coins.forEach(c=> charts[c.key]=create(c));
+      document.getElementById('currencyToggle').onchange = e => {
+        const isRUB = e.target.value==='RUB';
+        coins.forEach(c=>{
+          const chart=charts[c.key];
+          chart.data.datasets[0].data = staticUSD[c.key].prices.map(v=> isRUB? +(v*RUB_RATE).toFixed(2): v);
+          chart.options.scales.y.title = { display:true, text: isRUB?'₽':'$', color:'#fff' };
+          chart.update();
+        });
+      };
+    };
+  </script>
 </body>
 </html>
